--- a/front/pi2test/pi2test/Views/Product/OrderByAsc.cshtml
+++ b/front/pi2test/pi2test/Views/Product/OrderByAsc.cshtml
@@ -33,6 +33,9 @@
 <p>
     @Html.ActionLink("Order Desc", "OrderByDesc")
 </p>
+<p>
+    @Html.ActionLink("Stock Alert", "Stockalert")
+</p>
 <table class="table">
     <tr>
 
