--- a/front/pi2test/pi2test/Views/Orders/Index.cshtml
+++ b/front/pi2test/pi2test/Views/Orders/Index.cshtml
@@ -45,7 +45,7 @@
             @Html.DisplayNameFor(model => model.id_order)
         </th>
         <th>
-            @Html.DisplayNameFor(model => model.Status_order)
+            @Html.DisplayNameFor(model => model.status_order)
         </th>
         <th>
             @Html.DisplayNameFor(model => model.fees_order)
@@ -70,7 +70,7 @@
                 @Html.DisplayFor(modelItem => item.id_order)
             </td>
             <td>
-                @Html.DisplayFor(modelItem => item.Status_order)
+                @Html.DisplayFor(modelItem => item.status_order)
             </td>
             <td>
                 @Html.DisplayFor(modelItem => item.fees_order)
