--- a/front/pi2test/pi2test/Views/Product/OrderByDesc.cshtml
+++ b/front/pi2test/pi2test/Views/Product/OrderByDesc.cshtml
@@ -3,10 +3,7 @@
 @{ ViewBag.Title = "OrderByDesc";
                 Layout = "~/Views/Shared/_Layout.cshtml"; }
 <br />
-<br />
-<br />
-<br />
-<h2>Retrieve all products</h2>
+<h2>index</h2>
 
 
 
