--- a/front/pi2test/pi2test/Views/Orders/Create.cshtml
+++ b/front/pi2test/pi2test/Views/Orders/Create.cshtml
@@ -32,10 +32,10 @@
  
 
     <div class="form-group">
-        @Html.LabelFor(model => model.Status_order, htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.LabelFor(model => model.status_order, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
-            @Html.EditorFor(model => model.Status_order, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.Status_order, "", new { @class = "text-danger" })
+            @Html.EditorFor(model => model.status_order, new { htmlAttributes = new { @class = "form-control" } })
+            @Html.ValidationMessageFor(model => model.status_order, "", new { @class = "text-danger" })
         </div>
 
     </div><div class="form-group">
